2008-07-27  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m (do-applescript, do_applescript): Rename to
	ns-do-applescript, ns_do_applescript, and move within file.

2008-07-27  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove support for Mac Carbon.
	* mactoolbox.c:
	* macterm.h:
	* macterm.c:
	* macselect.c:
	* macmenu.c:
	* macgui.h:
	* macfns.c:
	* mac.c: Remove file.
	* s/darwin.h:
	* m/intel386.h:
	* xfaces.c:
	* xdisp.c:
	* window.c:
	* tparam.c:
	* termhooks.h:
	* termcap.c:
	* term.c:
	* syssignal.h:
	* sysselect.h:
	* sysdep.c:
	* process.c:
	* lread.c:
	* lisp.h:
	* keyboard.c:
	* image.c:
	* fringe.c:
	* frame.h:
	* frame.c:
	* fontset.c:
	* font.h:
	* font.c:
	* fns.c:
	* fileio.c:
	* emacs.c:
	* dispnew.c:
	* dispextern.h:
	* config.in:
	* atimer.c:
	* Makefile.in: Remove code for Carbon

2008-07-26 YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c (XDrawLine) [USE_MAC_IMAGE_IO]: Remove spurious return.

2008-07-26  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.h (kCGBitmapByteOrder32Host): New define for
	non-universal SDKs.

	* image.c (mac_create_cg_image_from_image, image_load_image_io)
	[USE_MAC_IMAGE_IO]: Remove conditionals for kCGBitmapByteOrder32Host.

	* macterm.c (XDrawLine, XCreatePixmapFromBitmapData)
	[USE_MAC_IMAGE_IO]: Remove conditionals for kCGBitmapByteOrder32Host.

2008-07-26  David Robinow  <drobinow@gmail.com>  (tiny change)

        * w32inevt.c: Include dispextern.h.

2008-07-26  Andreas Schwab  <schwab@suse.de>

	* print.c (print_object): Fix off-by-one in last change.

2008-07-25  Juanma Barranquero  <lekktu@gmail.com>

	* term.c (syms_of_term): Don't initialize default_orig_pair,
	default_set_foreground and default_set_background on Windows.

2008-07-25  Jason Rumney  <jasonr@gnu.org>

        * w32uniscribe.c (uniscribe_shape): Pass NULL for control arg to
        ScriptItemize. Clean up return value checking. Remove unused
        variables.